--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
 .display-5 {
     text-align: center;
 }
+
+@media only screen and (max-width: 600px) {
+    .main {
+        font-size: 20px !important;
+        line-height: 125% !important;
+     
