--- a/css/main.css
+++ b/css/main.css
@@ -2,8 +2,8 @@
     text-align: center;
 }
 
-@media only screen and (max-width: 600px) {
-    .main {
+@media only screen and (max-width: 480px) {
+    body {
         font-size: 20px !important;
         line-height: 125% !important;
     }
