--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,23 @@
 .display-5 {
     text-align: center;
 }
-
-@media only screen and (max-width: 480px) {
-    body {
-        font-size: 20px !important;
-        line-height: 125% !important;
+    .display-5 {
+        text-align: center;
+        font-size: 220%;
     }
-}
+
+    .form-control {
+        font-size: 220% !important;
+    }
+
+    .showTasks {
+        font-size: 220% !important;
+    }
+
+    .close {
+        font-size: 150% !important;
+    }
+
+    button {
+        font-size: 150% !important;
+    }
